# general-dynamics

./: .gitignore.txt  pyproject.toml
GeneralDynamics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
GeneralDynamics/IntegrationSchemes/: AdvectionSchemes.py  FunctionSchemes.py
GeneralDynamics/LyapunovExponents/: FTLE.py  test.py
GeneralDynamics/Other/: utilities.py
GeneralDynamics/RandomWalks/: RandomWalks.py
GeneralDynamics/VectorFields/: VectorFieldGeneration.py  test.py
